# anki-import

./: .gitignore  Lernwortschatz.csv  README.md  importer.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: create.yml
anki_import/: create.py  templates.html
