[tool.poetry]
name = "anki-import"
version = "0.1.0"
description = ""
authors = ["Александр Крамарев <pochemuto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
protobuf = "^4.25.2"
anki = "^23.12.1"
loguru = "^0.7.2"
gspread = "^5.12.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
