[tool.poetry]
name = "anki-import"
version = "0.1.0"
description = ""
authors = ["Александр Крамарев <pochemuto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
protobuf = "^4.25.2"
loguru = "^0.7.2"
gspread = "^5.12.4"
beautifulsoup4 = "^4.12.3"
types-beautifulsoup4 = "^4.12.0.20240106"
genanki = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
create = "anki_import.create:main"